# relish-notifier

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  main_suite_test.go  main_test.go  pyproject.toml
.github/workflows/: build.yaml  lint.yaml  release.yaml
